--- a/MySecurity2/src/main/resources/templates/vhome.html
+++ b/MySecurity2/src/main/resources/templates/vhome.html
@@ -5,16 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        button {
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            padding: 12px; /* パディングを増やし、ボタンを少し大きくしました */
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        button.logout { /* ログアウトボタンに対するスタイル */
+            padding: 7px; /* 少し小さくしました */
+       		background-color: rgb(192, 192, 192); 
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        p {
+            text-align: center;
+            color: #333;
+        }
+    </style>
     <title>ホーム画面</title>
 </head>
 <body>
-	<div>
+    <div class="container">
         <button class="StoreReg" onclick="location.href='vstoreReg'">店舗登録</button>
         <button class="DbReg" onclick="location.href='vdbReg'">DB登録</button>
         <button class="ItemList" onclick="location.href='vitemList'">値引き商品一覧</button>
-        <button class="Vlogout" onclick="location.href='vlogin'"th:action="@{/vlogout}" method="post">logout</button>
+        <button class="Vlogout logout" onclick="location.href='vlogin'" th:action="@{/vlogout}" method="post">logout</button>
         <p th:text="${id}">aaaa</p>
-        
-   	</div>
+    </div>
 </body>
 </html>
