--- a/MySecurity2/src/main/resources/static/css/style3.css
+++ b/MySecurity2/src/main/resources/static/css/style3.css
@@ -10,6 +10,7 @@ body {
 #column {
     margin: 20px auto;
     width: 80%;
+    padding-bottom: 60px; /* Adjust the value based on the height of your footer */
 }
 
 ul#product-list {
@@ -23,13 +24,6 @@ ul#product-list li {
     margin-bottom: 20px;
     padding: 20px;
     position: relative;
-}
-
-.product-link {
-    text-decoration: none;
-    color: #333;
-    display: flex;
-    flex-direction: column;
 }
 
 ul#product-list li img {
@@ -98,4 +92,26 @@ footer button {
 /* 修正した部分 */
 footer button:hover {
     background-color: #45a049;
+}
+
+ul#product-list li p.product-name {
+    font-size: 18px;
+    font-weight: bold;
+    color: rgb(255, 128, 192); /* 任意の色に変更可能 */
+    margin: 10px 0;
+}
+
+ul#product-list li p.genre {
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(64, 128, 128); /* 任意の色に変更可能 */
+    margin: 10px 0;
+}
+ul#product-list li img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    /* Add the following lines to set a fixed width and height for the images */
+    width: 200px; /* Adjust the value based on your preference */
+    height: 200px; /* Adjust the value based on your preference */
 }
