--- a/MySecurity2/src/main/resources/templates/sample.html
+++ b/MySecurity2/src/main/resources/templates/sample.html
@@ -8,7 +8,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/style2.css}">
-    <script src="/js/main.js"></script>
      <title>データベース登録画面</title>
     
     
@@ -67,7 +66,22 @@
             <form th:action="@{/vdbReg}" method="post" enctype="multipart/form-data" onsubmit="showPopup()">
                
                
-        
+               
+               <div id="my_container">
+		<div id="my_inner">
+			<div>= QuaggaJS =</div>
+			<div>
+				<button id="my_start">Start</button>
+				<button id="my_stop">Stop</button>
+			</div>
+			<div id="my_quagga"></div>
+			<div id="my_result">***</div>
+			<div id="my_barcode">
+				<div>***</div>
+			</div>
+		</div>
+	</div>
+               
                
                
                 <div class="form-group">
@@ -126,7 +140,9 @@
         </div>
     </div>
     
-   	
+   	<script src="//code.jquery.com/jquery-3.6.1.min.js"></script>
+	<script src="//unpkg.com/@ericblade/quagga2@1.7.4/dist/quagga.min.js"></script>
+	<script src="//cdn.jsdelivr.net/gh/mtaketani113/jquery-barcode@master/jquery-barcode.js"></script>
 	
     
 </body>
