--- a/MySecurity2/src/main/resources/templates/viewItem.html
+++ b/MySecurity2/src/main/resources/templates/viewItem.html
@@ -10,28 +10,64 @@
 </head>
 <body>
     <div id="column" class="column05">
-       <div th:if="${message}" class="alert alert-success" role="alert" id="popup">
+        <div th:if="${message}" class="alert alert-success" role="alert" id="popup">
             <p th:text="${message}"></p>
         </div>
-		<form th:action="@{/updateItem}" method="post">
-        <label for="Iname">商品名:</label>
-        <input type="text" id="Iname" name="productName" th:value="${item.productName}" required>
-        
-        <label for="Iimg">商品イメージ:</label>
-        <input type="file" id="Iimg" name="imagePath" required>
-        
-        <label for="Ipri">値段:</label>
-        <input type="text" id="Ipri" name="price" th:value="${item.price}" required>
-        
-        <!-- Include a hidden input field for the item ID -->
-        <input type="hidden" id="itemId" name="itemId" th:value="${item.id}">
-         <a th:href="@{/vitemList}"class="button">戻る</a>
-        <button type="submit">更新</button>
+        <form th:action="@{/updateItem}" method="post" enctype="multipart/form-data">
+            <label for="Iname">商品名:</label>
+            <input type="text" id="Iname" name="productName" th:value="${item.productName}" required>
+
+            <div class="form-group">
+                <label for="genre">ジャンル:</label>
+                <select id="genre" name="genre" th:value="${item.genre}" required>
+                    <option value="米・雑穀・シリアル">米・雑穀・シリアル</option>
+                    <option value="麺類">麺類</option>
+                    <option value="野菜">野菜</option>
+    				<option value="水産物・水産加工品">水産物・水産加工品</option>
+    				<option value="肉・肉加工品">肉・肉加工品</option>
+    				<option value="タマゴ・チーズ・乳製品">タマゴ・チーズ・乳製品</option>
+    				<option value="果物">果物</option>
+    				<option value="惣菜・レトルト・冷凍">惣菜・レトルト・冷凍</option>
+    				<option value="豆腐・納豆・漬物">豆腐・納豆・漬物</option>
+    				<option value="パン">パン</option>
+    				<option value="ジャム・はちみつ">ジャム・はちみつ</option>
+    				<option value="粉類">粉類</option>
+    				<option value="乾物">乾物</option>
+   					<option value="ダイエットフード">ダイエットフード</option>
+    				<option value="缶詰・瓶詰">缶詰・瓶詰</option>
+    				<option value="調味料">調味料</option>
+   					<option value="洋菓子">洋菓子</option>
+    				<option value="和菓子">和菓子</option>
+    				<option value="菓子材料">菓子材料</option>
+    				<option value="スナック・駄菓子">スナック・駄菓子</option>
+ 					<option value="おつまみ・珍味">おつまみ・珍味</option>
+ 					<option value="ドライフルーツ">ドライフルーツ</option>
+  				</select>
+            </div>
+       
+       
+          <label for="Iimg">商品イメージ:</label>
+            <input type="file" id="Iimg" name="imagePath"th:value="${item.imagePath}" required>
+ 			
+            <div class="form-group">
+                <label for="expirationDate">賞味期限:</label>
+                <input type="date" id="expirationDate" name="expirationDate" th:value="${item.expirationDate}" required>
+            </div>
+
+            <label for="Ipri">値段:</label>
+            <input type="text" id="Ipri" name="price" th:value="${item.price}" required>
+
+            <!-- Include a hidden input field for the item ID -->
+            <input type="hidden" id="itemId" name="itemId" th:value="${item.id}">
+
+            <a th:href="@{/vitemList}" class="button">戻る</a>
+            <button type="submit">更新</button>
         </form>
          
             
   
     </div>
+    
     <footer>
 		
      
