ユーザー画面

--- a/MySecurity2/src/main/resources/templates/usi.html
+++ b/MySecurity2/src/main/resources/templates/usi.html
@@ -22,7 +22,7 @@
             
             <div class="form-group">
     <label for="discountPrice">値引き価格:</label>
-    <input type="number" id="discountPrice" name="discountPriceStr"> <!-- name属性をdiscountPriceStrに変更 -->
+    <input type="text" id="discountPrice" name="discountPriceStr">
 </div>
             
             <div class="form-group">
