--- a/MySecurity2/src/main/resources/templates/uhome.html
+++ b/MySecurity2/src/main/resources/templates/uhome.html
@@ -16,13 +16,14 @@
     <ul id="product-list" class="column03">
         <li th:each="item : ${items}">
 		        <div>
+    				<span>商品名:</span>
+    				<span th:text="${item.productName}" style="color: red;"></span>
+				</div>
+		        <div>
 				    <span>画像:</span>
 				    <img th:src="'data:image/png;base64,' + ${item.imagePath}">
 				</div>
-				<div>
-				    <span>商品名:</span>
-				    <span th:text="${item.productName}"></span>
-				</div>
+				
 				<div>
 				    <span>値段:</span>
 				    <span th:text="${item.price}"></span>
