--- a/MySecurity2/src/main/resources/templates/uhome.html
+++ b/MySecurity2/src/main/resources/templates/uhome.html
@@ -14,7 +14,10 @@
     </div>
      <div id="column" class="column05">
     <ul id="product-list" class="column03">
-        <li th:each="item : ${items}">
+		<th:block th:each="storeRow : ${store}">
+			<th:block th:each="item : ${items}">
+			<th:block th:if="${storeRow['store_id'] == item['store_Id']}">
+        <li>
 		        <div>
     				<span>商品名:</span>
     				<span th:text="${item.productName}" style="color: red;"></span>
@@ -52,6 +55,9 @@
                     </div>
                 </th:block>
             </ul>
+            </th:block>
+            </th:block>
+            </th:block>
         </li>
     </ul>
 </div>
