--- a/MySecurity2/src/main/resources/templates/ussr.html
+++ b/MySecurity2/src/main/resources/templates/ussr.html
@@ -67,7 +67,7 @@
     <br>
 <footer>
 	
-        <button class="uhome" onclick="location.href='uhome'">リセット</button>
+        <button class="uss" onclick="location.href='uss'">戻る</button>
     
        
 </footer>
