--- a/MySecurity2/src/main/resources/templates/usd.html
+++ b/MySecurity2/src/main/resources/templates/usd.html
@@ -9,90 +9,94 @@
     <title>店舗詳細</title>
 </head>
 <body>
-	
-	<h1>店舗詳細</h1>
+    <h1>店舗詳細</h1>
     <table border="1">
-    <thead>
-        <tr>
-            <th>店舗名</th>
-            <th>電話番号</th>
-            <th>郵便番号</th>
-            <th>県</th>
-            <th>市</th>
-            <th>住所</th>
-            <th>番地</th>
-            <th>外観</th>
-        </tr>
-    </thead>
-    <tbody>
-        <!-- Loop through each store in the model attribute "store" -->
-        <tr th:each="storeRow : ${store}">
-            <td th:text="${storeRow.Sname}"></td>
-            <td th:text="${storeRow.Stel}"></td>
-            <td th:text="${storeRow.postal_code}"></td>
-            <td th:text="${storeRow.prefecture}"></td>
-            <td th:text="${storeRow.city}"></td>
-            <td th:text="${storeRow.address1}"></td>
-            <td th:text="${storeRow.address2}"></td>
-            <td>
-                <!-- 外観画像を右側に表示する -->
-                <img th:src="${storeRow.Simg}" alt="Store Image" width="100" height="100">
-            </td>
-        </tr>
-    </tbody>
-</table>
-	
+        <thead>
+            <tr>
+                <th>店舗名</th>
+                <th>電話番号</th>
+                <th>郵便番号</th>
+                <th>県</th>
+                <th>市</th>
+                <th>町名、番地</th>
+                <th>建物名</th>
+                <th>外観</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Loop through each store in the model attribute "store" -->
+            <tr th:each="storeRow : ${store}">
+                <td th:text="${storeRow.Sname}"></td>
+                <td th:text="${storeRow.Stel}"></td>
+                <td th:text="${storeRow.postal_code}"></td>
+                <td th:text="${storeRow.prefecture}"></td>
+                <td th:text="${storeRow.city}"></td>
+                <td th:text="${storeRow.address1}"></td>
+                <td th:text="${storeRow.address2}"></td>
+                <td>
+                    <!-- 外観画像を右側に表示する -->
+                    <img th:src="${storeRow.Simg}" alt="Store Image" width="100" height="100">
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
     <div id="column" class="column05">
-    <ul id="product-list" class="column03">
-        <!-- 商品を1つずつ表示 -->
-        <th:block th:each="storeRow : ${store}">
-        <th:block th:each="item : ${items}">
-            <!-- 特定の条件に基づいてHTMLを表示 -->
-            <th:block th:if="${storeRow['store_id'] == item['store_Id']}">
-                <li>
-                    <!-- 商品の詳細を表示 -->
-                    <a href="#">
-                        <!-- 商品名 -->
-                        <div>
-                            <span>商品名:</span>
-                            <span th:text="${item.productName}" style="color: red;"></span>
-                        </div>
-                        <!-- 画像 -->
-                        <div>
-                            <span>画像:</span>
-                            <img th:src="'data:image/png;base64,' + ${item.imagePath}">
-                        </div>
-                        <!-- 値段 -->
-                        <div>
-                            <span>値段:</span>
-                            <span th:text="${item.price}"></span>
-                        </div>
-                        <!-- 値引き値段 -->
-                        <div>
-                            <span>値引き値段:</span>
-                            <span th:text="${item.nebiki}"></span>
-                        </div>
-                        <!-- ジャンル -->
-                        <div>
-                            <span>ジャンル:</span>
-                            <span th:text="${item.genre}"></span>
-                        </div>
-                        <!-- 賞味期限 -->
-                        <div>
-                            <span>賞味期限:</span>
-                            <span th:text="${#dates.format(item.expirationDate, 'yyyy-MM-dd')}"></span>
-                        </div>
-                    </a>
-                </li>
+        <ul id="product-list" class="column03">
+            <!-- Loop through each store in the model attribute "store" -->
+            <th:block th:each="storeRow : ${store}">
+                <!-- Loop through each item in the model attribute "items" -->
+                <th:block th:each="item : ${items}">
+                    <!-- 特定の条件に基づいてHTMLを表示 -->
+                    <th:block th:if="${storeRow['store_id'] == item['store_Id']}">
+                        <li>
+                            <!-- 商品の詳細を表示 -->
+                            <a href="#">
+                                <!-- 商品名 -->
+                                <div>
+                                    <span>商品名:</span>
+                                    <span th:text="${item.productName}" style="color: red;"></span>
+                                </div>
+                                <!-- 画像 -->
+                                <div>
+                                    <span>画像:</span>
+                                    <img th:src="'data:image/png;base64,' + ${item.imagePath}">
+                                </div>
+                                <!-- 値段 -->
+                                <div>
+                                    <span>値段:</span>
+                                    <span th:text="${item.price}"></span>
+                                </div>
+                                <!-- 値引き値段 -->
+                                <div>
+                                    <span>値引き値段:</span>
+                                    <span th:text="${item.nebiki}"></span>
+                                </div>
+                                <!-- ジャンル -->
+                                <div>
+                                    <span>ジャンル:</span>
+                                    <span th:text="${item.genre}"></span>
+                                </div>
+                                <!-- 賞味期限 -->
+                                <div>
+                                    <span>賞味期限:</span>
+                                    <span th:text="${#dates.format(item.expirationDate, 'yyyy-MM-dd')}"></span>
+                                </div>
+                            </a>
+                        </li>
+                    </th:block>
+                </th:block>
             </th:block>
-        </th:block>
-       </th:block>
-    </ul>
-</div>
-<footer>
-	<button class="uhome" onclick="location.href='uhome'">戻る</button>
-        
-    
-       
-</footer>
+        </ul>
+    </div>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <button class="uhome" onclick="window.history.back();">戻る</button>  
+    </footer>
+
+    <!-- geocode.html のコンテンツを組み込む -->
+    <div th:utext="${geocodeContent}"></div>
+</body>
 </html>
