--- a/MySecurity2/src/main/resources/templates/uhome.html
+++ b/MySecurity2/src/main/resources/templates/uhome.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+	<style>
+    p {
+        line-height: 180%;
+}
+    .head-title {
+        width: 100%;
+        background: #87CEEB;
+        color: #fff;
+        text-indent: 8px;
+        font-weight: 700;
+        line-height: 180%;
+}
+</style>
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyDDgjsDidYAkfFuTWuD6YHkU6KBKB8TqIc"></script>
+<script src="/js/geocode.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +23,19 @@
     <script src="/js/Vitem.js"></script>
     <title>ホーム画面</title>
 </head>
+<body onload="initialize()">
+    
+    <select id="address">
+    <option th:each="address : ${addresses}" th:value="${address}" th:text="${address}"></option>
+	</select>
+
+    <input id="address" type="textbox" th:value="${storeData}" style="line-height:1.6em;font-size:16px">
+    <input type="button" value="ジオコーディング" onclick="codeAddress()" style="height:30px">
+    <div id="map_canvas" style="width:100%;height:300px"></div>
+      <p th:text="${storeData}" ></p>
+</body>
 <body>
-	<div id="map-container">
-	 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3233.8634268495603!2d140.5843038759996!3d35.85235226166316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6022fbf03dda6bcf%3A0x95bca55a09cecfce!2z44OZ44Kk44K344Ki44OV44O844OJ44K744Oz44K_44O86aaZ5Y-W5bCP6KaL5bed5bqX!5e0!3m2!1sja!2sjp!4v1700012400334!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+	
      
      <div id="column" class="column05">
     <ul id="product-list" class="column03">
