--- a/MySecurity2/src/main/resources/templates/usd.html
+++ b/MySecurity2/src/main/resources/templates/usd.html
@@ -34,12 +34,32 @@
                 <td th:text="${storeRow.address1}"></td>
                 <td th:text="${storeRow.address2}"></td>
                 <td>
-                    <!-- 外観画像を右側に表示する -->
-                    <img th:src="${storeRow.Simg}" alt="Store Image" width="100" height="100">
+                    
+                    
+                    <img th:src="'data:image/png;base64,' + ${storeRow.Simg}" alt="商品画像">
                 </td>
             </tr>
         </tbody>
     </table>
+    <div id="myModal" class="modal">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <img src="" alt="拡大画像" class="modal-content" id="modalImage">
+</div>
+<script>
+    // モーダルを開く
+    function openModal(imgElement) {
+        var modal = document.getElementById("myModal");
+        var modalImg = document.getElementById("modalImage");
+        modal.style.display = "block";
+        modalImg.src = imgElement.src;
+    }
+
+    // モーダルを閉じる
+    function closeModal() {
+        document.getElementById("myModal").style.display = "none";
+    }
+</script>
+
 
     <div id="column" class="column05">
         <ul id="product-list" class="column03">
