--- a/MySecurity2/src/main/resources/templates/usi.html
+++ b/MySecurity2/src/main/resources/templates/usi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>検索画面</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/style6.css}">
 </head>
 <body>
     <div id="search-form">
@@ -62,13 +62,15 @@
 
             
         
-    </div>
-    <footer>
+    
+    
+		
+		<button type="submit">検索</button>
+        </form>
         <button class="uhome" onclick="location.href='uhome'">戻る</button>
-        <button type="submit">検索</button>
-    </footer>
-    </form>
-
+    
+   
+</div>
 
 </body>
 </html>
