--- a/MySecurity2/src/main/resources/templates/uss.html
+++ b/MySecurity2/src/main/resources/templates/uss.html
@@ -4,30 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/style6.css}">
     <title>店舗検索画面</title>
     
-    <script>
-        // nullが選択されるオプションを追加する関数
-        function addNullOption(inputId) {
-            var inputElement = document.getElementById(inputId);
-
-            // 新しいオプションを作成
-            var nullOption = document.createElement("option");
-            nullOption.value = "null";
-            nullOption.text = "選択しない";
-
-            // セレクトボックスに追加
-            inputElement.insertBefore(nullOption, inputElement.firstChild);
-        }
-
-        // ドキュメントが読み込まれたときに呼び出す
-        document.addEventListener("DOMContentLoaded", function () {
-            // 選択可能な時間フィールドにnullのオプションを追加
-            addNullOption("example1");
-            addNullOption("example2");
-        });
-    </script>
+    
 </head>
 <body>
 	<div id="search-form">
@@ -71,13 +51,13 @@
 <label for="Stel">電話番号:</label>
 <input type="text" id="Stel" name="Stel">
                 
-                 
-               </div>	
-            <footer>
-			        <button class="uhome" onclick="location.href='uhome'">戻る</button>
-			        <button type="submit">検索</button>
-    		</footer>
-                </form>
+            
+			<button type="submit">検索</button> 
+    		</form>
+    		
+    		<button class="uhome" onclick="location.href='uhome'">戻る</button>
+    		
+</div>
         
 </body>
 </html>
