--- a/MySecurity2/src/main/resources/templates/uss.html
+++ b/MySecurity2/src/main/resources/templates/uss.html
@@ -20,10 +20,10 @@
                 <label for="Sname">店舗名:</label>
                 <input type="text" id="Sname" name="Sname">
               
-               <label for="Shour">営業時間:選択しない場合は0を消してください</label>
-<input type="time" name="example1" id="example1" value="00:00">
+               <label for="Shour">営業時間:</label>
+<input type="time" name="example1" id="example1" value=":">
 ～
-<input type="time" name="example2" id="example2" value="00:00">
+<input type="time" name="example2" id="example2" value=":">
 
 
 <label for="Sadd">住所:</label>
